Self/mydevorg/packaged/TimbaSurveys/objects/TimbaSurveyData__c.object
<CustomObject>
    <fields>
        <fullName>CP_Template_Backup__c</fullName>
        <label>CP Template Backup</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DateOfLastNotification__c</fullName>
        <label>DateOfLastNotification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasSites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasSites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LogEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_base_url__c</fullName>
        <label>SF base url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SendUsageNotifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendUsageNotifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteUrl__c</fullName>
        <label>SiteUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyInvitationsSent__c</fullName>
        <label>SurveyInvitationsSent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveysCreated__c</fullName>
        <label>SurveysCreated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThemeEngineVersion__c</fullName>
        <label>ThemeEngineVersion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TimbaSurveyData</label>
    <nameField>
        <label>TimbaSurveyData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimbaSurveyData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>